<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">geneva-notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_todo">TODO</string>
    <string name="tab_archive">ARCHIVE</string>
    <string name="tab_summary">SUMMARY</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_email">Email</string>
    <string name="popup_all">Email all TODO &amp; ARCHIVE items</string>
    <string name="popup_todo">Email all TODO items</string>
    <string name="dialogOk">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="action_discard">Discard</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="total_todo">&quot;Total number of TODO items : &quot;</string>
    <string name="todo_checked">&quot;  - Number of checked TODO items : &quot;</string>
    <string name="todo_unchecked">&quot;  - Number of unchecked TODO items : &quot;</string>
    <string name="total_archive">&quot;Total number of archived TODO items : &quot;</string>
    <string name="archive_checked">&quot;  - Number of checked archived TODO items : &quot;</string>
    <string name="archive_unchecked">&quot;  - Number of unchecked archived TODO items : &quot;</string>
    <string name="dialogSend">Send</string>
    <string name="email_sent">Email sent!</string>
    <string name="item_added">Item added to TODO list!</string>
    <string name="items_archived">Items archived!</string>
    <string name="items_discard">Items discarded!</string>
    <string name="items_unarchived">Items unarchived!</string>

</resources>
